Bug on mobile version

--- a/cara/apps/static/css/style.css
+++ b/cara/apps/static/css/style.css
@@ -101,6 +101,7 @@ body {
 .cara_home_image {
   height: 18rem;
   padding: 1rem;
+  margin-bottom: 1rem;
   border-radius: 1.25rem!important;
 }
 
